reports grouped by project, latest can be loaded (as of now html only) settings not available (wo javascript?)

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -29,6 +29,7 @@
                                 <input type="checkbox" name="other_files" value="{{ item }}"> {{ item }}<br>
                             {% endfor %}
                         </div>
+<div class="well"> <strong>Url to the latest report</strong> {{ url_latest }}</div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                         <select name = "scope" class = "btn btn-default">
