--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -1,9 +1,12 @@
-<!--div class=" col-md-6 col-sm-6 col-xs-12"-->
+{% for r in reports %}
+  {% include 'app/reports-settings.html' %}
+{% endfor %}
 {% if item.type == 'dashboard' %}
 <div class="panel panel-success ">
 {% else %}
 <div class="panel panel-default ">
 {% endif %}
+{% with reports|first as item %}
   <div class="panel-heading">
     <a href="{{ item.url_ }}" target="_blank">
       <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button>
@@ -13,34 +16,32 @@
     </a>
   </div>
   <div id="collapse{{ item.id }}{{ pane }}" class="panel-collapse collapse">
-  <div class="panel-body">
-    <div class="projects worksheet" style="text-align: center;">
-      <a href="{{ item.url_ }}" target="_blank">
-        <img src="{{ item.picture }}"  style="max-height: 200px; max-width: 100%;">
-      </a>
-      <p> {{ item.description }} </p>
-      {%  if pane == 'mine' %}
-        <form action="{% url 'reportschangescope' %}" method = "post">
-      {% endif  %}
-          <a href="{{ item.url_ }}" target="_blank">
-            <button type="button" class="btn btn-info" data-toggle="tooltip" title="Open report" data-placement="top"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button>
-          </a>
-      {%  if pane == 'mine' %}
-          <a href="{% url 'worksheet-unpublish' %}?report_id={{ item.id }}">
-            <button type="button" class="btn btn-danger" data-toggle="tooltip" title="Unpublish this report" data-placement="top"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
-          </a>
-{% csrf_token %}
-          <select name = "scope">
-            <option value="private" {% if item.scope == 'private' %} selected {% endif %}>private</option>
-            <option value="internal" {% if item.scope == 'internal' %} selected {% endif %}>internal</option>
-            <option value="public" {% if item.scope == 'public' %} selected {% endif %}>public</option>
+    <div class="panel-body">
+      <div class="projects worksheet">
+        <a href="{{ item.url_ }}" target="_blank">
+          <img src="{{ item.picture }}"  style="max-height: 200px; max-width: 100%;">
+        </a>
+        <div class="well">
+          <p><strong>Project description:</strong>{{ project.description }}
+          <p><strong>Report description (latest):</strong>{{ item.description }}
+        </div>
+        <form action="{% url 'reportformer' %}" method="post">
+          {% csrf_token %}
+          <label>Former reports</label>
+          <select name='report_id' style="max-width=500px">
+        {% for r in reports %}
+          <option value="{{ r.id }}">[{{ r.ts_ }}] {{ r.description }}</option>
+        {% endfor %}
           </select>
-          <input type = "hidden"  name = "report_id" value = "{{ item.id }}">
-          <button type="submit" class="btn btn-warning" data-toggle="tooltip" title="Apply the new scope to this report" data-placement="top"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></button>
-        </form>
+          <button type="submit" class="btn btn-info" data-toggle="tooltip" title="Open a former report" data-placement="top"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button>
+      {% if pane == 'mine' %}
+          <a href="#" data-toggle="modal" data-target="#report-settings-{{ r.id }}">
+            <button type="button" class="btn btn-info" data-toggle="tooltip" title="Report settings" data-placement="top"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></button>
+          </a>
       {% endif  %}
-    </div>    <!-- projects -->
-  </div>      <!-- panel body -->
-  </div>      <!-- collapse -->
+        </form>
+      </div>    <!-- projects -->
+    </div>      <!-- panel body -->
+  </div>        <!-- collapse -->
+{% endwith %}
 </div>        <!-- panel -->
-
