show whether dashboard or html the report

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -29,7 +29,7 @@
                                 <input type="checkbox" name="other_files" value="{{ item }}"> {{ item }}<br>
                             {% endfor %}
                         </div>
-<div class="well"> <strong>Url to the latest report</strong> {{ url_latest }}</div>
+<div class="well"> <strong>Url to the latest report:</strong> <code>{% url 'worksheet-open-latest' %}?project_id={{ project_id }}</code></div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                         <select name = "scope" class = "btn btn-default">
