report description is not yet pert of the model, but we may add, so in the template conditionally shown

--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -24,7 +24,9 @@
         <div class="well">
           <p><strong>Project description:</strong>{{ project.description }}
           <p><strong>Report type (latest):</strong>{{ item.type }}
+        {% if item.description %}
           <p><strong>Report description (latest):</strong>{{ item.description }}
+        {% endif %}
         {% if pane == 'mine' %}
           <p><strong>Url to the latest report:</strong><code>{% url 'worksheet-open-latest' %}?project_id={{ project.id }}</code>
         {% endif %}
