--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -1,78 +1,90 @@
 {% extends "app/layout.html" %}
-
 {% block content %}
 
+<div class="row">
+  <div class=" col-md-10 col-sm-10 col-xs-12">
+    <div class="panel panel-default ">
+      <div class="panel-heading">
+        <h4>Publish your work</h4>
+      </div>    <!-- heading -->
+      <div class="panel-body">
+        <form action="{% url 'notebooks-convert-html' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
+          {% csrf_token %}
+          <p>Notebooks can be published as static (html) or as interactive (dashboard) documents. These documents are available at the
+             <a href="{% url 'worksheets' %}" target="_blank" >Reports</a> section.
+          </p>
+          <hr>
+          <p>Please select the notebook to publish as a new report:</p>
+          <div class="form-group">
+          {% for item in ipynbs %}
+             <input type="radio" name="ipynb_file" value="{{ item }}" {% if forloop.first %} checked {% endif %} > {{ item }}<br>
+          {% endfor %}
+          </div>
+          {% if other_files %}
+          <hr>
+          <p>Select those files to be attached to your report:</p>
+          <div class="form-group">
+          {% for item in other_files %}
+             <input type="checkbox" name="other_files" value="{{ item }}"> {{ item }}<br>
+          {% endfor %}
+          </div>
+          {% endif %}
+          <div class="well">
+            <strong>The url to the latest report:</strong> <code>{% url 'worksheet-open-latest' %}?project_id={{ project_id }}</code>
+          </div>
+          {% if reports %}
+          <hr>
+          <p>There are former reports of this project. Tick those you would like to unpublish with this reporting transaction.</p>
+          {% for r in reports %}
+          <input type="checkbox" name="report2remove" value="{{ r.id }}">[{{ r.ts_ }}] ({{ r.type }} - {{ r.scope }}) {% if r.description %} {{ r.description }} {% endif %}<br>
+          {% endfor %}
+          {% endif %}
 
-    <div class="row">
-        <div class=" col-md-10 col-sm-10 col-xs-12">
+          <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+              <select name = "scope" class = "btn btn-default">
+                <option value="private">private</option>
+                <option value="internal">internal</option>
+                <option value="public">public</option>
+              </select>
+              <input type="hidden" name="project_id" value="{{ project_id }}" />
+              <input type="hidden" name="toconvert_files" value="" />
+              <input type="hidden" id="reports2remove" name="toremove_reports" value="" />
+              <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
+              <input type="submit" name="dashboard" value="Deploy as dashboard" class="btn btn-default" />
+              <input type="submit" name="cancel" value="Cancel" class="btn btn-default" />
+            </div>   <!-- col -->
+          </div>     <!-- form-group -->
+        </form>
+      </div>         <!-- panel-body -->
+    </div>           <!-- panel -->
+  </div>             <!-- col -->
+</div>               <!-- row -->
 
-            <div class="panel panel-default ">
-                <div class="panel-heading">
-                    <h2>Publish your work</h2>
-                    <h4>Convert notebooks to <strong>html</strong> or create <strong>dashboard</strong></h4>
-                </div>
-                <div class="panel-body">
-
-                    <section id="toconvertForm">
-                        <form action="{% url 'notebooks-convert-html' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
-                        {% csrf_token %}
-                        <div style="padding-left: 20px;">
-                        <div class="well"> <strong>Notebooks</strong> These notebooks will be converted to html and accessible in the <a href="/hub/worksheets" target="_blank" >Reports</a> section</div>
-                        <div class="form-group">
-                            {% for item in ipynbs %}
-                                <input type="radio" name="ipynb_file" value="{{ item }}" {% if forloop.first %} checked {% endif %} > {{ item }}<br>
-                            {% endfor %}
-                        </div>
-                        <div class="well"> <strong>Data files</strong> These files will be copied next to the deployed notebooks</div>
-                        <div class="form-group">
-                            {% for item in other_files %}
-                                <input type="checkbox" name="other_files" value="{{ item }}"> {{ item }}<br>
-                            {% endfor %}
-                        </div>
-<div class="well"> <strong>Url to the latest report:</strong> <code>{% url 'worksheet-open-latest' %}?project_id={{ project_id }}</code></div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                        <select name = "scope" class = "btn btn-default">
-                            <option value="private">private</option>
-                            <option value="internal">internal</option>
-                            <option value="public">public</option>
-                        </select>
-                                <input type="hidden" name="project_id" value="{{ project_id }}" />
-                                <input type="hidden" name="toconvert_files" value="" />
-
-                                <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
-                                <input type="submit" name="dashboard" value="Deploy as dashboard" class="btn btn-default" />
-                                <input type="submit" name="cancel" value="Cancel" class="btn btn-default" />
-                            </div>
-                        </div>
-                        </div>
-                        </form>
-                    </section>
-                </div>
-            </div>
-
-        </div>
-        </div>
-
-    <script>
-        function collectCheckedElements() {
-            var inputs = document.getElementsByTagName("input");
-            var other_files = "'"
-            for (var i = 1; i < inputs.length; i++) {
-                if (inputs[i].type == "checkbox") {
-                    if (inputs[i].name == "other_files") {
-                        if (inputs[i].checked) {
-                            other_files += inputs[i].value + ",";
-                        }
-
-                    }
-                }
-            }
-            if(other_files.length > 0) {
-                other_files = other_files.substring(1, other_files.length - 1);
-            }
-            document.getElementsByName("other_files")[0].value = other_files;
+<script>
+function collectCheckedElements() {
+  var inputs = document.getElementsByTagName("input");
+  var other_files = "'";
+  var reports_to_remove = "";
+  for (var i = 1; i < inputs.length; i++) {
+    if (inputs[i].type == "checkbox") {
+      if (inputs[i].name == "other_files") {
+        if (inputs[i].checked) {
+          other_files += inputs[i].value + ",";
         }
-    </script>
+      } else if (inputs[i].name == "report2remove") {
+        if (inputs[i].checked) {
+          reports_to_remove += inputs[i].value + ",";
+        }
+      }
+    }
+  }
+  if (other_files.length > 0) {
+    other_files = other_files.substring(1, other_files.length - 1);
+  }
+  document.getElementsByName("other_files")[0].value = other_files;
+  document.getElementsById("reports2remove").value = reports_to_remove;
+}
+</script>
 
 {% endblock %}
