worksheet -> report; redirec fixed

--- a/kooplexhub/kooplex/hub/templates/app/layout.html
+++ b/kooplexhub/kooplex/hub/templates/app/layout.html
@@ -42,7 +42,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <!-- <li><a href="{% url 'home' %}">Home</a></li> -->
-                    <li><a href="{% url 'worksheets' %}">Reports</a></li>
+                    <li><a href="{% url 'reports' %}">Reports</a></li>
                     {% if user.username %}
                         <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
                         <li><a href="/gitlab" target="_blank">Gitlab</a></li>
