--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -16,12 +16,12 @@
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
   <img
     src="/static/app/content/notebook.jpeg" style="height: 70px;padding-top: 10px 0px 10px;"
-    alt="Worksheets" >
+    alt="reports" >
             </div>
       <div class="caption">
         <h3> Public Reports</h3>
           <p>Access digested scientific output, meant for the general public.</p>
-        <p><a href="{% url 'worksheets' %}" class="btn btn-primary" role="button">
+        <p><a href="{% url 'reports' %}" class="btn btn-primary" role="button">
           <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>  to reports</a>
             </p>
       </div>
