--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -34,7 +34,7 @@
         <form action="{% url 'report-open-lates-post' %}" method="post">
           {% csrf_token %}
           <label>Former reports</label>
-          <select name='report_id' id='report_id{{ project.id }}'>
+          <select name='report_id' id='report_id{{ project.id }}' style="max-width: 800px;">
         {% for r in reports %}
           <option value="{{ r.id }}">[{{ r.ts_ }}] ({{ r.scope }} - {{ r.type }}) {{ r.description }}</option>
         {% endfor %}
