--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -36,7 +36,7 @@
           <label>Former reports</label>
           <select name='report_id' id='report_id{{ project.id }}' style="max-width: 800px;">
         {% for r in reports %}
-          <option value="{{ r.id }}">[{{ r.ts_ }}] ({{ r.scope }} - {{ r.type }}) {{ r.description }}</option>
+          <option value="{{ r.id }}">[{{ r.ts_ }}] ({{ r.scope }} - {{ r.type }}) {% if r.description %} {{ r.description }} {% endif %}</option>
         {% endfor %}
           </select>
           <button type="submit" class="btn btn-info" data-toggle="tooltip" title="Open a former report" data-placement="top"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button>
