--- a/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-publishform.html
@@ -34,7 +34,7 @@ Description of this report
           </div>
           {% endif %}
           <div class="well">
-            <strong>The url to the latest report:</strong> <code>{% url 'report-open-latest' %}?project_id={{ project_id }}</code>
+            <strong>The url to the latest report:</strong> <code>{% url 'report-openlatest' %}?project_id={{ project_id }}</code>
           </div>
           {% if reports %}
           <hr>
