--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -12,7 +12,7 @@
       <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button>
     </a>
     <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
-      <strong>{{ report_latest.name  }} [{{ report_latest.ts_ }}]</strong> - {{ report_latest.creator_name }} - {{ report_latest.file_name }}
+      <strong>{{ report_latest.name  }}/{{ project.name }} [{{ report_latest.ts_ }}]</strong> - {{ report_latest.creator_name }}
     </a>
   </div>
   <div id="collapse{{ report_latest.id }}{{ pane }}" class="panel-collapse collapse">
@@ -28,7 +28,7 @@
           <p><strong>Report description (latest):</strong>{{ report_latest.description }}
         {% endif %}
         {% if pane == 'mine' %}
-          <p><strong>Url to the latest report:</strong><code>{% url 'report-openlatest' %}?project_id={{ project.id }}</code>
+          <p><strong>Url to the latest report:</strong><code>{% url 'report-openlatest' %}?project_id={{ project.id }}&amp;filename={{ report_latest.file_name }}</code>
         {% endif %}
         </div>
         <form action="{% url 'report-open' %}" method="post">
@@ -38,7 +38,7 @@
         {% for r in reports %}
           <option value="{{ r.id }}"
 {% if r.type == "dashboard" %} style="background-color: lightgreen;" {% endif %}
->{{ r.name }} [{{ r.ts_ }}] ({{ r.scope }}) {% if r.description %} {{ r.description }} {% endif %}</option>
+>[{{ r.ts_ }}] ({{ r.scope }}) {% if r.description %} {{ r.description }} {% endif %}</option>
         {% endfor %}
           </select>
           <button type="submit" class="btn btn-info" data-toggle="tooltip" title="Open a former report" data-placement="top"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button>
