--- a/kooplexhub/kooplex/hub/templates/app/index_layout.html
+++ b/kooplexhub/kooplex/hub/templates/app/index_layout.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - Kooplex Hub</title>
@@ -11,34 +11,20 @@
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>  
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="{% url 'home' %}" class="navbar-brand">Kooplex Hub</a>
-            </div>
-{% include 'app/loginpartial.html' %}
-        </div>
-    </div>
-
+  </head>
+  <body>
+    {% include 'app/navbar.html' %}
     <div class="container body-content">
-{% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; {{ year }} - Kooplex Hub</p>
-        </footer>
+      {% block content %}{% endblock %}
+      <hr/>
+      <footer>
+        <p>&copy; {{ year }} - Kooplex Hub</p>
+      </footer>
     </div>
-
+  
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
-{% block scripts %}{% endblock %}
-
-</body>
+    {% block scripts %}{% endblock %}
+  </body>
 </html>
