--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -1,29 +1,55 @@
-
 <div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       {% if user.is_authenticated %}
         <a href="{% url 'notebooks' %}" class="navbar-brand">Kooplex Hub</a>
       {% else %}
         <a href="{% url 'home' %}" class="navbar-brand">Kooplex Hub</a>
       {% endif %}
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'reports' %}" role="button" type="button" data-toggle="tooltip" title="Access digested scientific output" data-placement="bottom">Reports</a></li>
-        {% if user.is_authenticated %}
-          <li><a href="{% url 'notebooks' %}" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects</a></li>
-          <li><a href="/gitlab" target="_blank" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
-          <li><a href="/owncloud" target="_blank" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud</a></li>
-          {% if user.is_superuser %}
-            <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
-          {% endif %}
-        {% else %}
-          <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects</a></li>
-          <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
-          <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud</a></li>
-        {% endif %}
-      </ul>
     </div>
-    {% include 'app/loginpartial.html' %}
-  </div>
-</div>
+    <ul class="nav navbar-nav">
+      <li><a href="{% url 'reports' %}" role="button" type="button" data-toggle="tooltip" title="Access digested scientific output" data-placement="bottom">Reports</a></li>
+      {% if user.is_authenticated %}
+        <li class="dropdown">
+          <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects <span class="caret"/></a>
+          <ul class="dropdown-menu">
+            <li><a href="{% url 'notebooks' %}">List projects</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#project-new">New project</a></li>
+          </ul>
+        </li>
+        <li><a href="/gitlab" target="_blank" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
+        <li class="dropdown">
+          <a class="dropdown-togle" data-toggle="dropdown" href="#" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud <span class="caret"/></a>
+          <ul class="dropdown-menu">
+            <li><a href="#" data-toggle="modal" data-target="#owncloud">Synchronize</a></li>
+            <li><a href="/owncloud" target="_blank">Owncloud dashboard</a></li>
+          </ul>
+        </li>
+        {% if user.is_superuser %}
+          <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
+        {% endif %}
+      {% else %}
+        <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Manage jupyter notebook projects" data-placement="bottom">Projects</a></li>
+        <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Browse project or file issues" data-placement="bottom">Gitlab</a></li>
+        <li><a href="{% url 'login' %}" role="button" type="button" data-toggle="tooltip" title="Access cloud storage" data-placement="bottom">Owncloud</a></li>
+      {% endif %}
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      {% if user.is_authenticated %}
+        <li><span class="navbar-brand">Hello {{ user.username }}!</span></li>
+        <li><a href="javascript:document.getElementById('changepassw').submit()">Change pass</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off <span class="glyphicon glyphicon-log-out"/></a></li>
+
+        <form id="changepassw" action="{% url 'changepassword' %}" method="post">
+          {% csrf_token %}
+        </form>
+        <form id="logoutForm" action="logout" method="post">
+          {% csrf_token %}
+        </form>
+      {% else %}
+        <li><a href="{% url 'login' %}">Log in <span class="glyphicon glyphicon-log-in"/></a></li>
+      {% endif %}
+    </ul>
+  </div>     <!-- container-fluid -->
+</div>       <!-- navbar -->
 
