--- a/kooplexhub/kooplex/hub/templates/app/navbar.html
+++ b/kooplexhub/kooplex/hub/templates/app/navbar.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="navbar-header">
       {% if user.is_authenticated %}
-        <a href="{% url 'notebooks' %}" class="navbar-brand">Kooplex Hub</a>
+        <a href="{% url 'notebooks' %}" class="navbar-brand"><img src="/static/app/content/logo.png" style="height: 30px" alt="Kooplex Hub"></a>
       {% else %}
-        <a href="{% url 'home' %}" class="navbar-brand">Kooplex Hub</a>
+        <a href="{% url 'home' %}" class="navbar-brand"><img src="/static/app/content/logo.png" style="height: 30px" alt="Kooplex Hub"></a>
       {% endif %}
     </div>
     <ul class="nav navbar-nav">
