--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -17,9 +17,12 @@
 <div class="jumbotron">
   <p class="lead">Motored by:</p>
   <div class="row" style="float: right">
+   <img src="/static/app/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
    <img src="/static/app/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
-   <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 40px; padding-right: 10px" alt="Jupyter Notebook">
-   <img src="https://about.gitlab.com/images/logo.png" style="height: 40px; padding-right: 10px" alt="GitLab">
+   <img src="/static/app/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
+   <!-- img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 40px; padding-right: 10px" alt="Jupyter Notebook" -->
+   <img src="/static/app/content/gitlab.png" style="height: 40px; padding-right: 10px" alt="gitlab">
+   <!--img src="https://about.gitlab.com/images/logo.png" style="height: 40px; padding-right: 10px" alt="GitLab"-->
    <img src="https://raw.githubusercontent.com/docker-library/docs/9d36b4ed7cabc35dbd3849272ba2bd7abe482172/owncloud/logo.png" style="height: 40px; padding-right: 10px" alt="OwnCLoud Fileserver">
   </div>
 </div>
