nginx logo added

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -24,6 +24,7 @@
    <img src="/static/app/content/gitlab.png" style="height: 40px; padding-right: 10px" alt="gitlab">
    <!--img src="https://about.gitlab.com/images/logo.png" style="height: 40px; padding-right: 10px" alt="GitLab"-->
    <img src="https://raw.githubusercontent.com/docker-library/docs/9d36b4ed7cabc35dbd3849272ba2bd7abe482172/owncloud/logo.png" style="height: 40px; padding-right: 10px" alt="OwnCLoud Fileserver">
+   <img src="/static/app/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
   </div>
 </div>
 
