--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="jumbotron">
+<div class="jumbotron" style="padding-top: 0px">
   <p class="lead">Motored by:</p>
   <div class="row" style="float: right">
    <img src="/static/app/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
